--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!doctype html>
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -11,6 +12,113 @@
 </head>
 
 <body>
+  <html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Great Idea!</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
+
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
+
+  <body>
+<div class="nav-bar">
+<nav>
+<li><a href="#">Services</a></li>
+<li><a href="#">Product</a></li>
+<li><a href="#">Vision</a></li>
+<li><a href="#">Features</a></li>
+<li><a href="#">About</a></li>
+<li><a href="#">Contact</a></li>
+
+<div>
+<button>Search</button>
+</div>
+</nav> 
+<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  Innovation
+  On
+  Demand
+
+  Get Started
+
+  <img src="img/header-img.png" alt="Image of a code snippet.">
+ <section>
+  
+  <div>
+  
+  <h3>Features</h3>
+      <p>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, 
+      in interdutm nisi. Suspendisse eu ornare nisl. 
+      Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>    
+</div> 
+
+<div>  
+<h3>About</h3>
+   <p>
+    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, 
+    in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, 
+    at imperdiet metus scelerisque quis.
+  </p>
+  </div>
+
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  
+  <div>
+  <h3>Services</h3>
+   <div><p>
+  Aliquam elementum magna eros, ac posuere elvit tempus et. 
+  Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. 
+  Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </p></div>
+</div> 
+ 
+<div class="topcontent"> 
+
+<div>
+  
+  <h3>Product</h3>
+  <div><p></p></div>
+  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, 
+  in interdutm nisi. Suspendisse eu ornare nisl. 
+  Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  
+</div>
+
+<div>
+    <h3>Vision</h3>
+    <div><p>
+    liquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, 
+    in interdutm nisi. Suspendisse eu ornare nisl. 
+    Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p></div>
+</div>
+
+</div>
+ </section>
+    <footer>
+   <h3>Contact</h3>
+    <address>
+  123 Way 456 Street<br>
+  Somewhere, USA<br>
+  <h3>adress</h3>
+  <br>
+  1 (888) 888-8888<br>
+  sales@greatidea.io<br>
+ </address>
+  <p class="copyright">Copyright Great Idea! 2018</p>
+   
+    </footer>
+
+  </body>
+</html>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 </body>
 </html>
